# CLI-SD-HSE-2026

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/diagrams/: classes.puml  components.puml
include/: executor.hpp  expander.hpp  lexer.hpp  parser.hpp  shell.hpp
src/: executor.cpp  expander.cpp  lexer.cpp  main.cpp  parser.cpp  shell.cpp  shell.hpp
tests/: expansion_tests.cpp  pipeline_tests.cpp  shell_tests.cpp
